[package]
name = "substrate-exchange"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
futures = "0.1"
jsonrpc-core = "12.0.0"
jsonrpc-derive = "12.0.0"
jsonrpc-http-server = "12.0.0"
log = "0.4"
node-runtime = { git = "https://github.com/paritytech/substrate/" }
parity-scale-codec = { version = "1.0", default-features = false, features = ["derive", "full"] }
serde = "1.0.98"
srml-balances = { git = "https://github.com/paritytech/substrate/" }
srml-system = { git = "https://github.com/paritytech/substrate/" }
sr-primitives = { git = "https://github.com/paritytech/substrate/" }
substrate-primitives = { git = "https://github.com/paritytech/substrate/" }
substrate-subxt = { path = "../substrate-subxt" }
tokio = "0.1"
url = "1.7"

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate/" }
